..F....... [ZBX-20978] fixed trigger popover layout error in high-contrast themes
Merge in ZBX/zabbix from feature/ZBX-20978-6.0 to release/6.0

* commit '0fa6849f6c4e5b3e90d14cfcd2d80ea296eba468':
  ..F....... [ZBX-20978] fixed trigger popover layout error in high-contrast themes

(cherry picked from commit ecf5c53725b806f2461eeb692bf022bc488f413e)

--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -7609,6 +7609,11 @@ z-select button.focusable:focus,
   .list-table.compact-view td .icon-wizard-action {
     background: transparent url("../img/icon-sprite.svg?20220519") no-repeat -318px -624px; }
 
+.overlay-dialogue .list-table th:first-child {
+  padding-left: 0px; }
+.overlay-dialogue .list-table td:first-child {
+  padding-left: 42px; }
+
 .filter-highlight-row-cb {
   display: none; }
 
